# frappe_ai_chatbot

./: ARCHITECTURE.md  README.md  pyproject.toml
frappe_ai_chatbot/: hooks.py  patches.txt  setup.py  tasks.py
frappe_ai_chatbot/ai_chatbot/: __init__.py
frappe_ai_chatbot/ai_chatbot/doctype/ai_chat_feedback/: __init__.py  ai_chat_feedback.json  ai_chat_feedback.py
frappe_ai_chatbot/ai_chatbot/doctype/ai_chat_message/: __init__.py  ai_chat_message.json  ai_chat_message.py
frappe_ai_chatbot/ai_chatbot/doctype/ai_chat_session/: __init__.py  ai_chat_session.json  ai_chat_session.py
frappe_ai_chatbot/ai_chatbot/doctype/ai_chatbot_settings/: __init__.py  ai_chatbot_settings.json  ai_chatbot_settings.py
frappe_ai_chatbot/ai_chatbot/doctype/ai_chatbot_user_token/: __init__.py  ai_chatbot_user_token.json  ai_chatbot_user_token.py
frappe_ai_chatbot/ai_chatbot/page/ai_assistant/: ai_assistant.js  ai_assistant.json  ai_assistant.py
frappe_ai_chatbot/api/: chat.py  oauth.py  stream.py
frappe_ai_chatbot/llm/: __init__.py  base_adapter.py  claude_adapter.py  gemini_adapter.py  local_adapter.py  openai_adapter.py  router.py
frappe_ai_chatbot/mcp/: __init__.py  client.py  executor.py  formatter.py
frappe_ai_chatbot/patches/v1_0_0/: add_tool_call_id_field.py  create_user_token_doctype.py
frappe_ai_chatbot/public/js/: ai_assistant_launcher.js  ai_chat_widget.js
frappe_ai_chatbot/utils/: context_manager.py  rate_limiter.py
