[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "frappe_ai_chatbot"
description = "AI chatbot for Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "google-generativeai>=0.3.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "sse-starlette>=2.1.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.6.0",
    "pygments>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]
